Fixes options panel on smaller screens; fixes showdoodle console error

--- a/src/scss/_display-controls.scss
+++ b/src/scss/_display-controls.scss
@@ -40,7 +40,6 @@
 
   @media screen and (max-width: 46em) {
     padding-left: 1em;
-    top: calc(-16px - 2em);
   }
 }
 
